--- a/index.html
+++ b/index.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment-3</title>
+
+    <!-- daisy ui -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- tailwind css -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'arrow': '-rotate-45 '
+                    }
+                }
+            }
+        }
+    </script>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/56e3a77e4a.js" crossorigin="anonymous"></script>
+
+
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
+    <style>
+        .manrope {
+            font-family: "Manrope", sans-serif;
+
+        }
+
+    </style>
+
 </head>
-<body>
-    
+
+<body class="manrope" >
+    <header class=" md:w-11/12 lg:w-5/6 mx-auto py-8">
+        <nav class="">
+            <div class="navbar bg-base-100">
+                <div class="lg:navbar-start flex-row-reverse">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-5 w-5"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M4 6h16M4 12h8m-8 6h16" />
+                      </svg>
+                    </div>
+                    <ul
+                      tabindex="0"
+                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                      <li><a class="font-extrabold text-[#494949]">Home</a></li>
+                      <li><a class="text-[#737373]">Services</a></li>
+                      <li><a class="text-[#737373]">Portfolio</a></li>
+                      <li><a class="text-[#737373]">Blogs</a></li>
+                      <li><a class="text-[#737373]">Contact Us</a></li>
+                    </ul>
+                  </div>
+                  <a class="btn btn-ghost text-3xl font-extrabold "><i class="fa-solid fa-arrow-right -rotate-45 text-xl  text-black bg-[#ABEF5F] rounded-full px-2 py-1"></i> Rinterio</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1">
+                    <li><a class="font-extrabold text-[#494949] hover:text-rose-600">Home</a></li>
+                      <li><a class="text-[#737373] hover:text-rose-600 ">Services</a></li>
+                      <li><a class="text-[#737373] hover:text-rose-600">Portfolio</a></li>
+                      <li><a class="text-[#737373] hover:text-rose-600">Blogs</a></li>
+                      <li><a class="text-[#737373] hover:text-rose-600">Contact Us</a></li>
+                  </ul>
+                </div>
+                <div class="lg:navbar-end gap-4">
+                <i class="hidden md:block fa-solid fa-magnifying-glass shadow-lg cursor-pointer px-3 py-2 rounded-full text-xl text-gray-400 inline-flex"></i>
+                <i class="fa-solid fa-cart-shopping hidden md:blockcursor-pointer shadow-lg px-3 py-2 rounded-full text-xl text-gray-400 inline-flex bg-white"></i>
+                  <a class="btn bg-[#ABEF5F] text-black rounded-full font-semibold text-xl hidden md:block">Book Consult <i class="fa-solid fa-arrow-right -rotate-45 text-xl  text-white bg-black rounded-full px-2 py-1"></i></a>
+                </div>
+              </div>
+
+        </nav>
+
+    </header>
+
+
 </body>
+
 </html>
