--- a/index.html
+++ b/index.html
@@ -44,34 +44,9 @@
 
 <body class="manrope" >
     <header class=" md:w-11/12 lg:w-5/6 mx-auto py-8">
-        <nav class="">
-            <div class="navbar bg-base-100">
-                <div class="lg:navbar-start flex-row-reverse">
-                  <div class="dropdown">
-                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        class="h-5 w-5"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M4 6h16M4 12h8m-8 6h16" />
-                      </svg>
-                    </div>
-                    <ul
-                      tabindex="0"
-                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                      <li><a class="font-extrabold text-[#494949]">Home</a></li>
-                      <li><a class="text-[#737373]">Services</a></li>
-                      <li><a class="text-[#737373]">Portfolio</a></li>
-                      <li><a class="text-[#737373]">Blogs</a></li>
-                      <li><a class="text-[#737373]">Contact Us</a></li>
-                    </ul>
-                  </div>
+        <nav class=" ">
+            <div class="navbar bg-base-100 justify-between">
+                <div class="flex-row-reverse justify-between">
                   <a class="btn btn-ghost text-3xl font-extrabold "><i class="fa-solid fa-arrow-right -rotate-45 text-xl  text-black bg-[#ABEF5F] rounded-full px-2 py-1"></i> Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
@@ -83,10 +58,35 @@
                       <li><a class="text-[#737373] hover:text-rose-600">Contact Us</a></li>
                   </ul>
                 </div>
-                <div class="lg:navbar-end gap-4">
-                <i class="hidden md:block fa-solid fa-magnifying-glass shadow-lg cursor-pointer px-3 py-2 rounded-full text-xl text-gray-400 inline-flex"></i>
-                <i class="fa-solid fa-cart-shopping hidden md:blockcursor-pointer shadow-lg px-3 py-2 rounded-full text-xl text-gray-400 inline-flex bg-white"></i>
-                  <a class="btn bg-[#ABEF5F] text-black rounded-full font-semibold text-xl hidden md:block">Book Consult <i class="fa-solid fa-arrow-right -rotate-45 text-xl  text-white bg-black rounded-full px-2 py-1"></i></a>
+                <div class=" gap-4">
+                    <div class="dropdown justify-end items-end">
+                        <div tabindex="0" role="button" class="btn btn-ghost shadow-lg rounded-full text-xl lg:hidden">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            class="h-5 w-5"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M4 6h16M4 12h8m-8 6h16" />
+                          </svg>
+                        </div>
+                        <ul
+                          tabindex="0"
+                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3  text-end justify-end p-2 -left-16  shadow-lg">
+                          <li><a class="font-extrabold text-[#494949]">Home</a></li>
+                          <li><a class="text-[#737373]">Services</a></li>
+                          <li><a class="text-[#737373]">Portfolio</a></li>
+                          <li><a class="text-[#737373]">Blogs</a></li>
+                          <li><a class="text-[#737373]">Contact Us</a></li>
+                        </ul>
+                      </div>
+                <i class="hidden md:block fa-solid fa-magnifying-glass shadow-lg cursor-pointer px-3 py-2 rounded-full text-xl text-gray-400 "></i>
+                <i class="fa-solid fa-cart-shopping hidden md:blockcursor-pointer shadow-lg px-3 py-2 rounded-full text-xl text-gray-400  bg-white"></i>
+                  <a class="btn bg-[#ABEF5F] text-black rounded-full font-semibold text-xl hidden md:block py-1">Book Consult <i class="fa-solid fa-arrow-right -rotate-45 text-xl  text-white bg-black rounded-full px-2 py-1"></i></a>
                 </div>
               </div>
 
