--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     <script>
         tailwind.config = {
             theme: {
+                backgroundPosition: {
+
+                    'left-top': 'left top',
+                    'left-top-1rem': 'left top 1rem',
+                }
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                        'gray': '#494949',
+                        'gray-1': '#494949',
                         'light-green': '#c5eb9ae1'
+                        'rd': 'rgba(0, 0, 0, 0.2)'
 
                     }
                 }
@@ -39,59 +45,288 @@
             font-family: "Manrope", sans-serif;
 
         }
-
     </style>
 
 </head>
 
-<body class="manrope" >
+<body class="manrope">
     <header class=" md:w-11/12 lg:w-5/6 mx-auto py-8">
         <nav class=" ">
             <div class="navbar bg-base-100 justify-between">
                 <div class="flex-row-reverse justify-between">
-                  <a class="btn btn-ghost text-3xl font-extrabold "><i class="fa-solid fa-arrow-right -rotate-45 text-xl  text-black bg-[#ABEF5F] rounded-full px-2 py-1"></i> Rinterio</a>
+                    <a class="btn btn-ghost text-3xl font-extrabold "><i
+                            class="fa-solid fa-arrow-right -rotate-45 text-xl  text-black bg-[#ABEF5F] rounded-full px-2 py-1"></i>
+                        Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal px-1">
-                    <li><a class="font-extrabold text-[#494949] hover:text-rose-600">Home</a></li>
-                      <li><a class="text-[#737373] hover:text-rose-600 ">Services</a></li>
-                      <li><a class="text-[#737373] hover:text-rose-600">Portfolio</a></li>
-                      <li><a class="text-[#737373] hover:text-rose-600">Blogs</a></li>
-                      <li><a class="text-[#737373] hover:text-rose-600">Contact Us</a></li>
-                  </ul>
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a class="font-extrabold text-[#494949] hover:text-rose-600">Home</a></li>
+                        <li><a class="text-[#737373] hover:text-rose-600 ">Services</a></li>
+                        <li><a class="text-[#737373] hover:text-rose-600">Portfolio</a></li>
+                        <li><a class="text-[#737373] hover:text-rose-600">Blogs</a></li>
+                        <li><a class="text-[#737373] hover:text-rose-600">Contact Us</a></li>
+                    </ul>
                 </div>
                 <div class=" gap-4">
                     <div class="dropdown justify-end items-end">
                         <div tabindex="0" role="button" class="btn btn-ghost shadow-lg rounded-full text-xl lg:hidden">
                             <i class="fa-solid fa-bars text-xl"></i>
                         </div>
-                        <ul
-                          tabindex="0"
-                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3  text-end justify-end p-2 -left-16  shadow-lg">
-                          <li><a class="font-extrabold text-[#494949]">Home</a></li>
-                          <li><a class="text-[#737373]">Services</a></li>
-                          <li><a class="text-[#737373]">Portfolio</a></li>
-                          <li><a class="text-[#737373]">Blogs</a></li>
-                          <li><a class="text-[#737373]">Contact Us</a></li>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3  text-end justify-end p-2 -left-16  shadow-lg">
+                            <li><a class="font-extrabold text-[#494949]">Home</a></li>
+                            <li><a class="text-[#737373]">Services</a></li>
+                            <li><a class="text-[#737373]">Portfolio</a></li>
+                            <li><a class="text-[#737373]">Blogs</a></li>
+                            <li><a class="text-[#737373]">Contact Us</a></li>
                         </ul>
-                      </div>
-                <i class="hidden md:block fa-solid fa-magnifying-glass shadow-lg cursor-pointer px-3 py-2 rounded-full text-xl text-gray-400 "></i>
-                <i class="fa-solid fa-cart-shopping hidden md:blockcursor-pointer shadow-lg px-3 py-2 rounded-full text-xl text-gray-400  bg-white"></i>
-                  <a class="btn bg-[#ABEF5F] text-black rounded-full font-semibold text-xl hidden md:block py-1 ">Book Consult  <i class="ml-2 fa-solid fa-arrow-right -rotate-45 text-xl  text-white bg-black rounded-full px-2 py-1"></i></a>
+                    </div>
+                    <i
+                        class="hidden md:block fa-solid fa-magnifying-glass shadow-lg cursor-pointer px-3 py-2 rounded-full text-xl text-gray-400 "></i>
+                    <i
+                        class="fa-solid fa-cart-shopping hidden md:blockcursor-pointer shadow-lg px-3 py-2 rounded-full text-xl text-gray-400  bg-white"></i>
+                    <a class="btn bg-[#ABEF5F] text-black rounded-full font-semibold text-xl hidden md:block py-1 ">Book
+                        Consult <i
+                            class="ml-2 fa-solid fa-arrow-right -rotate-45 text-xl  text-white bg-black rounded-full px-2 py-1"></i></a>
                 </div>
-              </div>
+            </div>
 
         </nav>
 
         <!-- banner -->
-         <div class=" my-24 text-center p-2 md:p-4 lg:p-0">
+        <div class=" my-24 text-center p-2 md:p-4 lg:p-0">
             <img class="mx-auto w-full lg:w-[600px]" src="assets/banner.png" alt="">
-            <h1 class="mt-6 mb-6 text-3xl md:text-6xl font-extrabold">A barn house of this design has a <br> striking appearance</h1>
-            <p class="lg:w-[972px] mx-auto text-[#494949] font-medium leading-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-            <button class="btn bg-[#c5eb9ae1] rounded-full font-semibold text-xl px-6 pb-4 pt-1  mt-8 ">View Details <i class="ml-1 fa-solid fa-arrow-right -rotate-45 text-xl  text-black bg-[#ABEF5F] rounded-full px-2 py-1 mt-1"></i></button>
-         </div>
+            <h1 class="mt-6 mb-6 text-3xl md:text-6xl font-extrabold">A barn house of this design has a <br> striking
+                appearance</h1>
+            <p class="lg:w-[972px] mx-auto text-[#494949] font-medium leading-6">The barn house captivates with its
+                blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and
+                large windows that flood the space with natural light.</p>
+            <button class="btn bg-[#c5eb9ae1] rounded-full font-semibold text-xl px-6 pb-4 pt-1  mt-8 ">View Details <i
+                    class="ml-1 fa-solid fa-arrow-right -rotate-45 text-xl  text-black bg-[#ABEF5F] rounded-full px-2 py-1 mt-1"></i></button>
+        </div>
 
     </header>
+
+    <!-- about us -->
+    <section
+        class="bg-gray-100 py-12 md:py-20 lg:px-40 lg:bg-[url('/assets/Vector.png')] bg-no-repeat  bg-[left_100px] px-5 md:px-10 ">
+
+        <!-- about us -->
+
+        <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center mx-auto lg:space-x-20">
+            <div class="space-y-6 lg:w-11/12 text-center lg:text-left ">
+                <button class="btn bg-white text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
+                        class="mr-1 fa-solid fa-arrow-right text-lg  text-black "></i> About Us </button>
+                <h1 class="font-bold md:text-4xl text-[#212121]">We design thoughtful, live-able spaces </h1>
+                <p class="text-[#494949] leading-6">The barn house captivates with its blend of rustic charm and
+                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+                <div
+                    class="space-y-6 md:space-y-0 md:space-x-4 lg:space-x-0 lg:space-y-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1">
+                    <div class="card flex flex-row bg-base-100 shadow-xl px-6 py-5">
+                        <figure>
+                            <img class="w-full" src="assets/commercial.png" alt="Album" />
+                        </figure>
+                        <div class="card-body w-5/6">
+                            <h2 class="card-title">Commercial</h2>
+                            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+
+                        </div>
+                    </div>
+                    <div class="card flex flex-row  bg-base-100 shadow-xl px-6 py-5">
+                        <figure>
+                            <img src="assets/residential.png" alt="Album" />
+                        </figure>
+                        <div class="card-body w-5/6">
+                            <h2 class="card-title">Residential</h2>
+                            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+            <div class="items-center justify-center mt-7 lg:w-5/6 lg:mt-20">
+                <img class="my-auto mx-auto w-full " src="assets/Rectangle.png" alt="">
+
+            </div>
+
+
+        </div>
+
+        <!-- how we works -->
+        <div class="mt-24">
+            <div class="space-y-6 text-center">
+                <button class="btn bg-white text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
+                        class="mr-1 fa-solid fa-arrow-right text-lg  text-black "></i> How we works </button>
+                <h1 class="text-[#212121] font-bold text-4xl lg:text-5xl"> Our Works Process</h1>
+                <p class="text-gray-1 lg:w-[678px] mx-auto leading-6">The barn house captivates with its blend of rustic
+                    charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+
+            <!-- cards -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-10 gap-5">
+
+                <div class="card bg-[#E7C1D3] text-primary-content ">
+                    <div class="card-body text-black">
+                        <img class="w-[48px]" src="assets/concept.png" alt="">
+                        <h2 class="card-title">Concept</h2>
+                        <p class="text-gray-1 mx-auto leading-6">The barn house captivates with its blend of rustic
+                            charm and modern.</p>
+
+                    </div>
+                </div>
+                <div class="card bg-[#EFDA6E] text-primary-content ">
+                    <div class="card-body text-black">
+                        <img class="w-[48px]" src="assets/flow-chart.png" alt="">
+                        <h2 class="card-title">Design Process</h2>
+                        <p class="text-gray-1 mx-auto leading-6">The barn house captivates with its blend of rustic
+                            charm and modern.</p>
+
+                    </div>
+                </div>
+                <div class="card bg-[#A4DAC3] text-primary-content ">
+                    <div class="card-body text-black">
+                        <img class="w-[48px]" src="assets/vision.png" alt="">
+                        <h2 class="card-title">Supervision</h2>
+                        <p class="text-gray-1 mx-auto leading-6">The barn house captivates with its blend of rustic
+                            charm and modern.</p>
+
+                    </div>
+                </div>
+                <div class="card bg-[#77AAEA] text-primary-content ">
+                    <div class="card-body text-black">
+                        <img class="w-[48px]" src="assets/budget-planning.png" alt="">
+                        <h2 class="card-title">Budget Planning</h2>
+                        <p class="text-gray-1 mx-auto leading-6">The barn house captivates with its blend of rustic
+                            charm and modern.</p>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+
+
+
+
+
+    </section>
+
+    <!-- explore latest works -->
+    <section class="md:w-11/12 lg:w-5/6 mx-auto py-24">
+        <div class="space-y-6 text-center">
+            <button class="btn  bg-[#d7eebde1] text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
+                    class="mr-1 fa-solid fa-arrow-right text-lg  text-black  "></i> Explore our Latest works </button>
+            <h1 class="text-[#212121] font-extrabold text-4xl lg:text-5xl">Our Latest Portfolio</h1>
+            <p class="text-gray-1 lg:w-[678px] mx-auto leading-6">The barn house captivates with its blend of rustic
+                charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+
+        <!-- container -->
+        <div class="lg:w-10/12 mx-auto mt-16 space-y-5 ">
+
+            <!-- card-1 -->
+            <!-- <div class="card flex flex-row bg-base-100 shadow-xl px-6 py-5 col-span-3 border w-11/12 border-gray-200"> -->
+            <div class=" md:h-[240px] lg:flex gap-5">
+                <div class="card flex flex-col md:flex-row bg-base-100 shadow-xl p-2 lg:p-5  border md:w-full lg:w-2/3 border-gray-200 items-center ">
+
+                    <figure>
+                        <img class="w-full pt-2 px-0 md:pt-0" src="assets/img1.png" alt="Album" />
+                    </figure>
+                    <div class="p-4 md:px-4 md:card-body md:w-4/6 space-y-5">
+                        <h2 class="card-title">Commercial</h2>
+                        <p class="text-gray-1 leading-6">The barn house captivates with its blend of rustic charm and
+                            modern. The barn house captivates with its blend of rustic charm and modern .</p>
+
+                        <button class=" text-left bg-white rounded-full font-semibold text-lg ">View Details <i
+                                class="ml-1 fa-solid fa-arrow-right -rotate-45 text-xl  text-black bg-[#ABEF5F] rounded-full px-2 py-1 mt-1"></i></button>
+
+                    </div>
+
+
+                </div>
+
+
+                <!-- card-2 -->
+                <div class="hidden lg:block card flex flex-row bg-base-100 w-1/3 shadow-xl px-6 py-5  border border-gray-200 ">
+                    <img class="w-full h-full" src="assets/img2.png" alt="">
+
+                </div>
+
+            </div>
+
+            <!-- mobile view -->
+             <div class="lg:hidden flex flex-col md:flex-row gap-5 md:h-[227px]">
+                <div class="md:w-1/2 card flex flex-row bg-base-100  shadow-xl px-6 py-5  border border-gray-200 ">
+                    <img class="w-full" src="assets/img2.png" alt="">
+
+                </div>
+                <!-- card-5 -->
+                <div class="card md:w-1/2 flex flex-row bg-base-100 shadow-xl px-6 py-5  border border-gray-200">
+                    <img class="w-full" src="assets/img5.png" alt="">
+
+                </div>
+
+             </div>
+
+
+
+
+            <div class="flex gap-5 md:h-[240px]">
+                <!-- card-3 -->
+                <div class="hidden lg:block card w-1/4 flex flex-row bg-base-100 shadow-xl px-6 py-5  border border-gray-200">
+                    <img class="w-full h-full" src="assets/img3.png" alt="">
+
+                </div>
+                <!-- card-4 -->
+                <div class=" card md:w-full lg:w-2/4 flex flex-col md:flex-row bg-base-100 shadow-xl px-6 py-5  border border-gray-200 ">
+                    <figure>
+                        <img class="w-full h-full" src="assets/img4.png" alt="Album" />
+                    </figure>
+                    <div class="p-3 lg:card-body lg:w-4/6 space-y-5">
+                        <h2 class="card-title">Commercial</h2>
+                        <p class="text-gray-1 leading-6">The barn house captivates with its blend of rustic charm and modern. </p>
+
+                        <button class=" text-left ml-0 bg-white rounded-full font-semibold text-lg ">View Details <i
+                                class="ml-1 fa-solid fa-arrow-right -rotate-45 text-xl  text-black bg-[#ABEF5F] rounded-full px-2 py-1 mt-1"></i></button>
+
+                    </div>
+
+
+                </div>
+                <!-- card-5 -->
+                <div class="hidden lg:block card w-1/4 flex flex-row bg-base-100 shadow-xl px-6 py-5  border border-gray-200">
+                    <img class="w-full h-full" src="assets/img5.png" alt="">
+
+                </div>
+
+            </div>
+            <!-- mobile view -->
+            <div class="lg:hidden flex flex-col md:flex-row gap-5 md:h-[227px]">
+                <div class="md:w-1/2 card flex flex-row bg-base-100  shadow-xl px-6 py-5  border border-gray-200 ">
+                    <img class="w-full" src="assets/img3.png" alt="">
+
+                </div>
+                <!-- card-5 -->
+                <div class="card md:w-1/2 flex flex-row bg-base-100 shadow-xl px-6 py-5  border border-gray-200">
+                    <img class="w-full" src="assets/img5.png" alt="">
+
+                </div>
+
+             </div>
+
+
+
+
+
+        </div>
+    </section>
 
 
 </body>
