--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -49,7 +49,7 @@
 
 </head>
 
-<body class="manrope">
+<body class="manrope ">
     <header class=" md:w-11/12 lg:w-5/6 mx-auto py-8">
         <nav class=" ">
             <div class="navbar bg-base-100 justify-between">
@@ -219,7 +219,7 @@
     </section>
 
     <!-- explore latest works -->
-    <section class="md:w-11/12 lg:w-5/6 mx-auto py-24">
+    <section class="md:w-11/12 lg:w-5/6 mx-auto py-12 md:py-24 px-5 md:px-10">
         <div class="space-y-6 text-center">
             <button class="btn  bg-[#d7eebde1] text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
                     class="mr-1 fa-solid fa-arrow-right text-lg  text-black  "></i> Explore our Latest works </button>
@@ -321,12 +321,13 @@
 
              </div>
 
-
-
-
-
         </div>
     </section>
+
+
+    <footer class="py-24 bg-[url('/assets/bg.jpg')] h-32 ">
+
+    </footer>
 
 
 </body>
