--- a/index.html
+++ b/index.html
@@ -132,23 +132,23 @@
 
                 <div
                     class="space-y-6 md:space-y-0 md:space-x-4 lg:space-x-0 lg:space-y-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1">
-                    <div class="card flex flex-row bg-base-100 shadow-xl pl-6 py-5">
+                    <div class="card flex flex-row bg-base-100 shadow-xl pl-6 py-5 items-start lg:items-center">
                         <figure>
-                            <img class="w-full rounded-lg" src="assets/commercial.png" alt="Album" />
+                            <img class="w-full rounded-lg pt-8 lg:pt-0" src="assets/commercial.png" alt="Album" />
                         </figure>
                         <div class="card-body w-5/6 text-left">
                             <h2 class="card-title">Commercial</h2>
-                            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                            <p>Our commercial design services focus on creating functional and aesthetically pleasing spaces for businesses. We consider the unique needs of each industry to deliver designs that enhance productivity, brand identity, and customer experience.</p>
 
                         </div>
                     </div>
-                    <div class="card flex flex-row  bg-base-100 shadow-xl pl-6 py-5">
+                    <div class="card flex flex-row  bg-base-100 shadow-xl pl-6 py-5 items-start lg:items-center">
                         <figure>
-                            <img src="assets/residential.png" alt="Album" />
+                            <img class="pt-8 lg:pt-0" src="assets/residential.png" alt="Album" />
                         </figure>
                         <div class="card-body w-5/6 text-left">
                             <h2 class="card-title">Residential</h2>
-                            <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                            <p>Our residential design services are tailored to turn houses into homes. We blend style, comfort, and practicality to create personalized spaces that reflect your taste and lifestyle, ensuring every detail contributes to a harmonious living environment.</p>
 
                         </div>
                     </div>
@@ -168,12 +168,11 @@
 
         <!-- how we works -->
         <div class="mt-24">
-            <div class="space-y-6 text-center">
+            <div class="space-y-6 text-center ">
                 <button class="btn bg-white text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
                         class="mr-1 fa-solid fa-arrow-right text-lg  text-black "></i> How we works </button>
                 <h1 class="text-[#212121] font-bold text-4xl lg:text-5xl"> Our Works Process</h1>
-                <p class="text-gray-1 lg:w-[678px] mx-auto leading-6">The barn house captivates with its blend of rustic
-                    charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-gray-1 lg:w-[678px] mx-auto leading-6">Our work process is a seamless journey from concept to completion. We begin by crafting a unique design concept, followed by detailed planning to bring your vision to life. Throughout construction, we supervise every step to ensure quality and precision.</p>
             </div>
 
             <!-- cards -->
@@ -183,8 +182,7 @@
                     <div class="card-body text-black">
                         <img class="w-[48px]" src="assets/concept.png" alt="">
                         <h2 class="card-title">Concept</h2>
-                        <p class="text-gray-1 mx-auto leading-6">The barn house captivates with its blend of rustic
-                            charm and modern.</p>
+                        <p class="text-gray-1 mx-auto leading-6">We start by understanding your vision and goals to create a unique design concept tailored to your needs.</p>
 
                     </div>
                 </div>
@@ -192,8 +190,7 @@
                     <div class="card-body text-black">
                         <img class="w-[48px]" src="assets/flow-chart.png" alt="">
                         <h2 class="card-title">Design Process</h2>
-                        <p class="text-gray-1 mx-auto leading-6">The barn house captivates with its blend of rustic
-                            charm and modern.</p>
+                        <p class="text-gray-1 mx-auto leading-6">Our team develops detailed plans and visualizations to bring your concept to life with precision and creativity.</p>
 
                     </div>
                 </div>
@@ -201,8 +198,7 @@
                     <div class="card-body text-black">
                         <img class="w-[48px]" src="assets/vision.png" alt="">
                         <h2 class="card-title">Supervision</h2>
-                        <p class="text-gray-1 mx-auto leading-6">The barn house captivates with its blend of rustic
-                            charm and modern.</p>
+                        <p class="text-gray-1 mx-auto leading-6">We oversee the entire construction process, ensuring the design is executed flawlessly and to the highest standards.</p>
 
                     </div>
                 </div>
@@ -210,8 +206,7 @@
                     <div class="card-body text-black">
                         <img class="w-[48px]" src="assets/budget-planning.png" alt="">
                         <h2 class="card-title">Budget Planning</h2>
-                        <p class="text-gray-1 mx-auto leading-6">The barn house captivates with its blend of rustic
-                            charm and modern.</p>
+                        <p class="text-gray-1 mx-auto leading-6">We carefully manage costs, providing transparent budget planning to keep your project on track and within your financial goals.</p>
 
                     </div>
                 </div>
@@ -233,8 +228,7 @@
             <button class="btn  bg-[#d7eebde1] text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
                     class="mr-1 fa-solid fa-arrow-right text-lg  text-black  "></i> Explore our Latest works </button>
             <h1 class="text-[#212121] font-extrabold text-4xl lg:text-5xl">Our Latest Portfolio</h1>
-            <p class="text-gray-1 lg:w-[678px] mx-auto leading-6">The barn house captivates with its blend of rustic
-                charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-gray-1 lg:w-[678px] mx-auto leading-6">Explore our latest portfolio, showcasing a diverse range of projects that highlight our commitment to innovative design and exceptional quality.</p>
         </div>
 
         <!-- container -->
@@ -403,8 +397,7 @@
                     class="btn opacity-90 bg-[#dbf3bde1] text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
                         class="mr-1 fa-solid fa-arrow-right text-lg  text-black  "></i> Let’s Connect</button>
                 <h1 class="text-[#212121] font-bold text-4xl md:text-5xl">Let’s Discuss Next Project</h1>
-                <p class="text-[#494949] leading-6 lg:w-[700px] mx-auto">The barn house captivates with its blend of
-                    rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-[#494949] leading-6 lg:w-[700px] mx-auto">Ready to bring your vision to life? Let's discuss your next project! Whether it's a commercial space or a residential design, our team is eager to collaborate and turn your ideas into reality. Get in touch with us today to start the conversation.</p>
             </div>
 
 
@@ -442,8 +435,7 @@
                 <a class="btn btn-ghost text-3xl text-[#E9E9E9] font-extrabold "><i
                         class="fa-solid fa-arrow-right -rotate-45 text-xl text-black  bg-[#ABEF5F] rounded-full px-2 py-1"></i>
                     Rinterio</a>
-                <p class="text-[#737373] leading-6">The barn house captivates with its blend of rustic charm and modern
-                    sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-[#737373] leading-6">Rinterio, we believe in the power of design to transform spaces and elevate experiences. Our approach is client-centered, blending creativity with practicality to deliver designs that are both stunning and functional.</p>
             </div>
             <ul class=" lg:w-[900px] mx-auto px-1 mt-6 md:flex justify-between text-center space-y-6 md:space-y-0">
                 <li><a
