--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     colors: {
                         clifford: '#da373d',
                         'gray-1': '#494949',
-                        'light-green': '#c5eb9ae1'
+                        'light-green': '#c5eb9ae1',
                         'rd': 'rgba(0, 0, 0, 0.2)'
 
                     }
@@ -93,7 +93,7 @@
                         class="hidden md:block fa-solid fa-magnifying-glass shadow-lg cursor-pointer px-3 py-2 rounded-full text-xl text-gray-400 "></i>
                     <i
                         class="fa-solid fa-cart-shopping hidden md:blockcursor-pointer shadow-lg px-3 py-2 rounded-full text-xl text-gray-400  bg-white"></i>
-                    <a class="btn bg-[#ABEF5F] text-black rounded-full font-semibold text-xl hidden md:block py-1 ">Book
+                    <a class="btn bg-[#ABEF5F] ease-in duration-300 text-black rounded-full font-semibold text-xl hidden md:block py-1 ">Book
                         Consult <i
                             class="ml-2 fa-solid fa-arrow-right -rotate-45 text-xl  text-white bg-black rounded-full px-2 py-1"></i></a>
                 </div>
@@ -123,8 +123,8 @@
         <!-- about us -->
 
         <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center mx-auto lg:space-x-20">
-            <div class="space-y-6 lg:w-11/12 text-center lg:text-left ">
-                <button class="btn bg-white text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
+            <div class="space-y-6 lg:w-11/12 text-center lg:text-left relative">
+                <button class="btn bg-white text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 sticky top-0"><i
                         class="mr-1 fa-solid fa-arrow-right text-lg  text-black "></i> About Us </button>
                 <h1 class="font-bold text-3xl md:text-4xl text-[#212121]">We design thoughtful, live-able spaces </h1>
                 <p class="text-[#494949] leading-6">The barn house captivates with its blend of rustic charm and
@@ -168,8 +168,8 @@
 
         <!-- how we works -->
         <div class="mt-24">
-            <div class="space-y-6 text-center ">
-                <button class="btn bg-white text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
+            <div class="space-y-6 text-center relative">
+                <button class="btn bg-white text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 sticky top-0"><i
                         class="mr-1 fa-solid fa-arrow-right text-lg  text-black "></i> How we works </button>
                 <h1 class="text-[#212121] font-bold text-4xl lg:text-5xl"> Our Works Process</h1>
                 <p class="text-gray-1 lg:w-[678px] mx-auto leading-6">Our work process is a seamless journey from concept to completion. We begin by crafting a unique design concept, followed by detailed planning to bring your vision to life. Throughout construction, we supervise every step to ensure quality and precision.</p>
@@ -223,9 +223,9 @@
     </section>
 
     <!-- explore latest works -->
-    <section class="md:w-11/12 lg:w-5/6 mx-auto py-12 md:mb-14 lg:py-24 px-5 md:px-10">
-        <div class="space-y-6 text-center">
-            <button class="btn  bg-[#d7eebde1] text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
+    <section class="md:w-11/12 lg:w-5/6 mx-auto py-12 md:mb-14 lg:py-24 px-5 md:px-10 ">
+        <div class="space-y-6 text-center relative">
+            <button class="btn  bg-[#d7eebde1] text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8  sticky top-0 "><i
                     class="mr-1 fa-solid fa-arrow-right text-lg  text-black  "></i> Explore our Latest works </button>
             <h1 class="text-[#212121] font-extrabold text-4xl lg:text-5xl">Our Latest Portfolio</h1>
             <p class="text-gray-1 lg:w-[678px] mx-auto leading-6">Explore our latest portfolio, showcasing a diverse range of projects that highlight our commitment to innovative design and exceptional quality.</p>
@@ -341,7 +341,7 @@
     </div>
     <div class="lg:w-11/12 mx-auto   ">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-center">
-            <div class=" text-primary-content flex  rounded-2xl p-5 shadow-2xl lg:shadow-none  hover:shadow-2xl items-start gap-4">
+            <div class=" text-primary-content flex  rounded-2xl p-5 shadow-2xl lg:shadow-none lg:hover:bg-white cursor-pointer ease-in duration-300 hover:shadow-2xl items-start gap-4">
                 <div class="w-1/12 ">
                     <i class="fa-regular fa-star text-5xl text-black pt-8"></i>
 
@@ -355,7 +355,7 @@
 
                 </div>
             </div>
-            <div class=" text-primary-content flex  rounded-2xl p-5 shadow-2xl lg:shadow-none   hover:shadow-2xl items-start gap-4">
+            <div class=" text-primary-content flex  rounded-2xl p-5 shadow-2xl lg:shadow-none  lg:hover:bg-white cursor-pointer ease-in duration-300 hover:shadow-2xl items-start gap-4">
                 <div class="w-1/12 pt-8">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-16">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m6.115 5.19.319 1.913A6 6 0 0 0 8.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 0 0 2.288-4.042 1.087 1.087 0 0 0-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 0 1-.98-.314l-.295-.295a1.125 1.125 0 0 1 0-1.591l.13-.132a1.125 1.125 0 0 1 1.3-.21l.603.302a.809.809 0 0 0 1.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 0 0 1.528-1.732l.146-.292M6.115 5.19A9 9 0 1 0 17.18 4.64M6.115 5.19A8.965 8.965 0 0 1 12 3c1.929 0 3.716.607 5.18 1.64" />
@@ -392,9 +392,9 @@
     <!-- next project -->
     <section style="background-image: url(assets/bg.jpg);" class="py-12 px-5 md:px-10 lg:px-0 lg:py-24  bg-cover">
         <div class="lg:w-8/12 mx-auto">
-            <div class="text-center space-y-5">
+            <div class="text-center space-y-5 relative">
                 <button
-                    class="btn opacity-90 bg-[#dbf3bde1] text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 "><i
+                    class="btn opacity-90 bg-[#dbf3bde1] text-[#494949]  rounded-full font-bold  px-6 pb-1 pt-1  mt-8 sticky top-0"><i
                         class="mr-1 fa-solid fa-arrow-right text-lg  text-black  "></i> Let’s Connect</button>
                 <h1 class="text-[#212121] font-bold text-4xl md:text-5xl">Let’s Discuss Next Project</h1>
                 <p class="text-[#494949] leading-6 lg:w-[700px] mx-auto">Ready to bring your vision to life? Let's discuss your next project! Whether it's a commercial space or a residential design, our team is eager to collaborate and turn your ideas into reality. Get in touch with us today to start the conversation.</p>
